--- a/client/package.json
+++ b/client/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.0.0",
-    "react-copy-to-clipboard": "^5.0.4",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0",
-    "simple-peer": "^9.11.1",
-    "socket.io-client": "^4.4.1",
-    "web-vitals": "^2.1.4"
+    "@material-ui/core": "^4.11.3",
+		"@material-ui/icons": "^4.11.2",
+		"@testing-library/jest-dom": "^5.11.4",
+		"@testing-library/react": "^11.1.0",
+		"@testing-library/user-event": "^12.1.10",
+		"add": "^2.0.6",
+		"peerjs": "^1.3.1",
+		"react": "^17.0.1",
+		"react-copy-to-clipboard": "^5.0.3",
+		"react-dom": "^17.0.1",
+		"react-scripts": "4.0.3",
+		"simple-peer": "^9.10.0",
+		"socket.io-client": "^4.0.0",
+		"web-vitals": "^1.0.1",
+		"yarn": "^1.22.10"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
